Fix minor layout issues

--- a/css/cropper/cropper-ui.css
+++ b/css/cropper/cropper-ui.css
@@ -1,6 +1,6 @@
 .cropper-actions {
 	margin-top: 0.5em;
-	text-align: center;
+	margin-left: 20px;
 }
 
 .cropper-actions label {
